# speedtransfer

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  path_settings.py  pyproject.toml  speedtransfer.yml
.github/workflows/: docker-publish.yaml
aggregated_results/: phase_count_per_loc_simulated.npy
aggregated_results/2016/: phase_count_per_loc_2016.npy  phase_per_loc_2016.npy  speed_change_per_body_pos_non_focal.csv  speed_change_vs_age.npy  speed_change_vs_phase_null.npy  speed_change_vs_phase_real.npy  speed_change_vs_r_squared.npy  speed_change_vs_start_vel_null.npy  speed_change_vs_start_vel_real.npy  test_vel_change_side0_2016_phase.csv  test_vel_change_side0_2016_start_vel.csv  vel_change_per_body_pos_2016.csv  vel_change_per_dist_and_hour_grid.pkl
aggregated_results/2019/: phase_count_per_loc_2019.npy  phase_per_loc_2019.npy  speed_change_per_body_pos.csv  speed_change_per_body_pos_non_focal.csv  speed_change_vs_age.npy  speed_change_vs_phase_null.npy  speed_change_vs_phase_real.npy  speed_change_vs_r_squared.npy  (+9 more)
analysis/: 24h_signal_fft.py  aggregate_cosinor_estimates_per_hive_position.py  aggregate_cosinor_estimates_per_hive_position.sh  circadianess_fit_per_bee.py  circadianess_fit_per_bee_concat.py  comparison_interaction_null_model_test.py  correlation_of_age_tests.py  correlation_of_dist_entrance_tests.py  cosinor_fit_per_bee.py  cosinor_fit_per_bee_concat.py  cosinor_fit_per_bee_local_files.py  mean_velocity_per_age_group.py  mean_velocity_per_age_group_concat.py  point_of_interaction.py  postprocess.sh  read_velocities_from_db.py  read_velocities_from_db.sh  read_velocities_from_parquet.py  run_individual_job.sh  run_parallel_jobs.sh  social_network_interaction_tree.py  social_network_interaction_tree_concat.py  speed_transfers.py  velocity_change_per_interaction.py  velocity_change_per_interaction_concat.py  velocity_change_per_interaction_null_model.py  velocity_change_per_location.py
figures/: animations.ipynb  figure_1.ipynb  figure_panel_1.ipynb  figure_panel_2.ipynb  figure_panel_3.ipynb  figure_supplementary.ipynb  figures_panel_2.ipynb
simulation/: aggregate_phase_per_loaction.py  density_decay_sweep.ipynb  density_vs_phase_diff.ipynb  draw_positions_from_gaussian.m  run_density_decay_sweep.py  run_simulation.asv  run_simulation.m  simulation.py  sketch_agents_3D.m
(+14 files in other folders)
